# uitest

./: .gitignore  Cargo.toml  LICENSE.txt
derive/: Cargo.toml
derive/src/: bind_group.rs  lib.rs  sampler_params.rs  texture_view_params.rs
examples/demo/: app.rs  main.rs
res/fonts/: big_blue_terminal.json
res/shaders/: instanced_rect.wgsl  rect.wgsl  text.wgsl
src/: app.rs  button.rs  lazy_app_handler.rs  lib.rs  main.rs  mouse_event.rs  resources.rs  theme.rs  utils.rs
src/element/: image.rs  instanced_rect.rs  rect.rs  text.rs
src/layout/: container.rs  mod.rs  stack.rs
src/rendering/: instanced_rect.rs  mod.rs  rect.rs  text.rs
src/shapes/: instanced_rect.rs  mod.rs  rect.rs  text.rs
src/view/: abstract_views.rs  axis.rs  button.rs  image.rs  mod.rs  rect.rs  stack.rs  text.rs  ui_context.rs  util_views.rs  view_context.rs  view_lists.rs
src/wgpu_utils/: bind_group.rs  binding.rs  canvas.rs  color.rs  index_buffer.rs  mod.rs  uniform_buffer.rs  vertex_buffer.rs
