[package]
name = "uitest"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
cgmath = "0.18.0"
derive_more = { version = "2.1.0", features = ["full"] }
pollster = "0.4.0"
wgpu = "27.0.1"
winit = "0.30.12"
env_logger = { version = "0.11.8", features = ["kv"] }
log = { version = "0.4.28", features = ["kv"] }

derive = { path = "./derive" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
image = "0.25.9"
